--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dominate==2.1.16
 Flask==0.10.1
 Flask-Bootstrap==3.3.5.7
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
@@ -8,3 +9,4 @@ requests==2.9.1
 spotipy==2.3.7
 visitor==0.1.2
 Werkzeug==0.11.3
+WTForms==2.1
